syntax = "proto3";

package proto;

option go_package = "github.com/msmkdenis/yap-gophkeeper/internal/proto/credit_card";

message PostCreditCardRequest {
  string number = 1;
  string owner_name = 2;
  string expires_at = 3;
  string cvv_code = 4;
  string pin_code = 5;
  string metadata = 6;
}

message PostCreditCardResponse {
  string id = 1;
  string owner_id = 2;
  string number = 3;
  string owner_name = 4;
  string expires_at = 5;
  string cvv_code = 6;
  string pin_code = 7;
  string metadata = 8;
  string created_at = 9;
  string updated_at = 10;
}

message GetCreditCardRequest {}

message CreditCard {
  string id = 1;
  string owner_id = 2;
  string number = 3;
  string owner_name = 4;
  string expires_at = 5;
  string cvv_code = 6;
  string pin_code = 7;
  string metadata = 8;
  string created_at = 9;
  string updated_at = 10;
}

message GetCreditCardResponse {
  repeated CreditCard cards = 1;
}

service CreditCardService {
  rpc PostSaveCreditCard(PostCreditCardRequest) returns (PostCreditCardResponse);
  rpc GetLoadCreditCard(GetCreditCardRequest) returns (GetCreditCardResponse);

}